--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -36,6 +36,7 @@
                                                  <li><a href="#" th:href="@{/usuarios/new/usuario}">Crear Usuario</a></li>
                                                  <li><a href="#" th:href="@{/roles/}">Consultar Roles</a></li>
                                                 <li><a href="#" th:href="@{/roles/new/rol}">Crear Rol</a></li>
+                                              
 					</ul>
 				</li>
                                 <li ><a href="#">Carga de Archivos Fuentes<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a></li>
@@ -123,13 +124,14 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Niveles Escolares <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
+				
+                                <li><a href="#" th:href="@{/nivelescolaridades/}">Niveles escolares</a></li>
+                                <li><a href="#" th:href="@{/nivelescolaridades/new/nivelescolaridad}">Crear Nivel escolar</a></li>
 					</ul>
 				</li>
                                 
                                   <li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuraciones del Sistema <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Estados<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/estados/}">Consultar Estados</a></li>
                                                 <li><a href="#" th:href="@{/estados/new}">Crear Estado</a></li>
