--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -22,6 +22,7 @@
                    <th>Fecha desde</th>
                    <th>Fecha hasta</th>
                    <th>Acciones</th>
+                   <th> hola</th>
                 
             </tr>
             <tr th:each="nivelescolaridad : ${nivelescolaridades}">
