--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -122,9 +122,11 @@
 				</li>
                                 
                                 <li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Niveles Escolares <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Niveles Escolares  <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span>
+                                            <span class="glyphicon glyphicon-education"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-				
+					
+                                
                                 <li><a href="#" th:href="@{/nivelescolaridades/}">Niveles escolares</a></li>
                                 <li><a href="#" th:href="@{/nivelescolaridades/new/nivelescolaridad}">Crear Nivel escolar</a></li>
 					</ul>
