--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -44,6 +44,7 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/beneficios/}">Consultar Beneficios</a></li>
                                                 <li><a href="#" th:href="@{/beneficios/new/beneficio}">Crear Beneficio</a></li>
+                                                <li><a href="#" th:href="@{/beneficios/report/}">Reporte de Beneficios</a></li>
 					</ul>
 				</li>
                                 
