--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -52,8 +52,9 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Cuadros Directivos <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
+						<li><a href="#" th:href="@{/cuadrodirectivos/}">Consultar Cuadros Directivos</a></li>
+                                                <li><a href="#" th:href="@{/cuadrodirectivos/new/cuadrodirectivo}">Crear Cuadros Directivos</a></li>
+                                                <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Beneficios</a></li>
 					</ul>
 				</li>
                                 
