--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -10,25 +10,39 @@
 </head>
 <body>
 <div class="container">
-    <h2>Datos de estado</h2>
+    <h2>Datos de Cuadros directivos</h2>
         <div>
             <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo estado</label>
+                    <label class="col-sm-2 control-label">codigo</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${estado.codigoestado}">Estado Id</p></div>
+                        <p class="form-control-static" th:text="${cuadrodirectivo.codigocuadrodirectivo}">cuadro Id</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre:</label>
+                    <label class="col-sm-2 control-label">Responsable:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${estado.nombreestado}">Nombre de estado</p>
+                        <p class="form-control-static" th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</p>
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="col-sm-2 control-label">area:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${cuadrodirectivo.area}">area</p>
+                    </div>
+                </div>
+                
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Descripcion:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</p>
+                    </div>
+                </div>
+                
+                 <div class="form-group">
                     <label class="col-sm-2 control-label">contraseña:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${estado.valorestado}">Valor de estado</p>
+                        <p class="form-control-static" th:text="${cuadrodirectivo.fechapresentacion}">Valor de estado</p>
                     </div>
                 </div>
               
