--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -54,7 +54,7 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/cuadrodirectivos/}">Consultar Cuadros Directivos</a></li>
                                                 <li><a href="#" th:href="@{/cuadrodirectivos/new/cuadrodirectivo}">Crear Cuadros Directivos</a></li>
-                                                <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Beneficios</a></li>
+                                                <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
 					</ul>
 				</li>
                                 
@@ -138,7 +138,9 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Estados<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/estados/}">Consultar Estados</a></li>
-                                                <li><a href="#" th:href="@{/estados/new}">Crear Estado</a></li>
+                                                <li><a href="#" th:href="@{/estados/new/estado}">Crear Estado</a></li>
+                                                
+                                                  
 					</ul>
 				</li>
 			</ul>
