--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -2,54 +2,77 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Nuevo Cuadro Directivo</title>
+    <title>Nuevo Nivel Escolaridad</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
 <div class="container">
-    <h2>Detalle de cuadros directivos</h2>
+    <h2>Detalle niveles de escolaridad</h2>
     <div>
         <form class="form-horizontal" th:object="${cuadrodirectivo}" th:action="@{../cuadrodirectivo}" method="post">
-            <input type="hidden" th:field="*{codigocuadrodirectivo}"/>
-            <input type="hidden" th:field="*{responsablecuadrodirectivo}"/>
+          
             <div class="form-group">
-                <label class="col-sm-2 control-label">COdigo de cuadro directivo:</label>
+                <label class="col-sm-2 control-label">Codigo cuadro d:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{codigocuadrodirectivo}"/>
+                    <input type="text" class="form-control" th:field="*{codigocuadrodirectivo}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">responsablecuadrodirectivo:</label>
+                <label class="col-sm-2 control-label">Responsable:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{responsablecuadrodirectivo}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">area:</label>
+                <label class="col-sm-2 control-label">Area:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{area}"/>
                 </div>
             </div>
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">desripcioncuadrodirectivo:</label>
+                <label class="col-sm-2 control-label">Descripcion:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{desripcioncuadrodirectivo}"/>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fechapre sentacion:</label>
+            
+             <div class="form-group">
+                <label class="col-sm-2 control-label">Fecha Presentacion:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{echapresentacion}"/>
+                    <input type="text" class="form-control" th:field="*{fechapresentacion}"/>
                 </div>
             </div>
-<!--            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de baja:</label>
+            
+             <div class="form-group">
+                <label class="col-sm-2 control-label">Codigo Empleado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechabaja}"/>
+                    <input type="number" class="form-control" th:field="*{codigoempleado}"/>
+                </div>
+            </div>
+            
+<!--             <div class="form-group">
+                <label class="col-sm-2 control-label">Pais Nivel escolaridad:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{paisnivelescolaridad}"/>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Fecha desde nivel escolar:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{fechadesdenivelescolaridad}"/>
+                </div>
+            </div>
+            
+            
+             <div class="form-group">
+                <label class="col-sm-2 control-label">fecha hasta nivel escolaridad:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{fechahastanivelescolaridad}"/>
                 </div>
             </div>-->
-
+            
             <div class="row">
                 <button type="submit" class="btn btn-default">Agregar</button>
             </div>
