--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -42,7 +42,7 @@
                  <div class="form-group">
                     <label class="col-sm-2 control-label">contraseña:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${cuadrodirectivo.fechapresentacion}">Valor de estado</p>
+                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">Valor de estado</p>
                     </div>
                 </div>
               
