--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -61,8 +61,8 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Comites <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
+						<li><a href="#" th:href="@{/comites/}">Consultar comites</a></li>
+                                                 <li><a href="#" th:href="@{/comites/new/comite}">Crear comite</a></li>
 					</ul>
 				</li>
 				
