--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-   
-</head>
+  
 <head lang="en">
 
     <title>Nuevo beneficio</title>
@@ -12,8 +11,8 @@
     <h2>Usuario Details</h2>
     <div>
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
-<!--            <input type="hidden" th:field="*{codigocomite}"/>
-            <input type="hidden" th:field="*{nombrecomite}"/>-->
+          <input type="hidden" th:field="*{codigocomite}"/>
+            <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de comite:</label>
@@ -61,13 +60,12 @@
                     <input type="text" class="form-control" th:field="*{fechahastacomite}"/>
                 </div>
             </div>
-            
-            <div class="form-group">
+        <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo empleado:</label>
-                <div class="col-sm-10">
+                                     <div class="col-sm-10">
                     <input type="number" class="form-control" th:field="*{codigoempleado}"/>
-                </div>
-            </div>
+                                          </div>
+                                </div>
             
             <div class="row">
                 <button type="submit" class="btn btn-default">Agregar</button>
@@ -75,13 +73,7 @@
         </form>
     </div>
 </div>
-
-</body>
-
-<script src="../static/css/hydro/js/jquery.js"></script>
-	        
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script>
+<script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
             dateFormat: 'yy-mm-dd'
@@ -90,12 +82,8 @@
         $('#fechahastacomite').datepicker({
             dateFormat: 'yy-mm-dd'
         });
-//        $('#generar').click(function(){
-//            $("#formbeneficio").attr('action', '../pdf/'+ $("#codigo").val().toString());
-//            $("form#formbeneficio").submit();
-//            
-//        });
     });
 </script>
 
+</body>	
 </html>
