--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -4,12 +4,12 @@
 </head>
 <head lang="en">
 
-    <title>Nuevo beneficio</title>
+    <title>Nuevo Comite</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
 <div class="container">
-    <h2>Usuario Details</h2>
+    <h2>detalle comite</h2>
     <div>
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
 <!--            <input type="hidden" th:field="*{codigocomite}"/>
