--- a/src/main/resources/templates/fragments/comite/comitereporte.html
+++ b/src/main/resources/templates/fragments/comite/comitereporte.html
@@ -11,7 +11,7 @@
     
      
      
-    <title>SISADMRH-Reporte de Puestos a Caducar</title>
+    <title>SISADMRH-Reporte de comites</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
@@ -21,10 +21,10 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-7">
-    <h3 align="center">Generar Reporte de Puestos a Caducar</h3>
+    <h3 align="center">Generar Reporte de comites</h3>
     <br><br><br>
     
-        <form class="form-horizontal"   th:object="${puesto}"  th:action="@{../puesto}" method="post">
+        <form class="form-horizontal"   th:object="${comite}"  th:action="@{../comite}" method="post">
           
            <!--<div class="col-md-6">-->
          
@@ -32,14 +32,14 @@
                 <label class="col-sm-6 control-label">Fecha Desde(*):</label>
                 <div class="col-sm-2">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechacontrataciondesde}" name="fechacontrataciondesde" id="fechacontrataciondesde"  />
+                     <input class="form-control" type="text" th:field="*{fechadesdecomite}" name="fechadesdecomite" id="fechahastacomite"  />
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-6 control-label">Fecha Hasta(*):</label>
                 <div class="col-sm-2">
                     <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechacontratacionhasta}" name="fechacontratacionhasta" id="fechacontratacionhasta"  />
+                     <input class="form-control" type="text" th:field="*{fechahastacomite}" name="fechahastacomite" id="fechahastacomite"  />
                 </div>
             </div>
            
@@ -51,7 +51,7 @@
           
         </form>
       <div class="row" align="center">
-                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/puestos/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
                 <button type="submit" class="btn btn-default">Consultar</button>
                 <button type="submit" class="btn btn-default">Limpiar</button>
             </div>
