--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -2,29 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Nuevo Nivel Escolaridad</title>
+    <title>Nuevo beneficio</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
 <div class="container">
-    <h2>Detalle niveles de escolaridad</h2>
+    <h2>Usuario Details</h2>
     <div>
         <form class="form-horizontal" th:object="${cuadrodirectivo}" th:action="@{../cuadrodirectivo}" method="post">
-          
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo cuadro d:</label>
+<!--            <input type="hidden" th:field="*{codigocuadrodirectivo}"/>
+            <input type="hidden" th:field="*{responsablecuadrodirectivo}"/>-->
+<!--            <div class="form-group">
+                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{codigocuadrodirectivo}"/>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
-                <label class="col-sm-2 control-label">Responsable:</label>
+                <label class="col-sm-2 control-label">Responsaable:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{responsablecuadrodirectivo}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Area:</label>
+                <label class="col-sm-2 control-label">area:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{area}"/>
                 </div>
@@ -36,42 +37,12 @@
                     <input type="text" class="form-control" th:field="*{desripcioncuadrodirectivo}"/>
                 </div>
             </div>
-            
-             <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha Presentacion:</label>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">fecha presentacion:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{fechapresentacion}"/>
                 </div>
             </div>
-            
-             <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo Empleado:</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{codigoempleado}"/>
-                </div>
-            </div>
-            
-<!--             <div class="form-group">
-                <label class="col-sm-2 control-label">Pais Nivel escolaridad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{paisnivelescolaridad}"/>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha desde nivel escolar:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechadesdenivelescolaridad}"/>
-                </div>
-            </div>
-            
-            
-             <div class="form-group">
-                <label class="col-sm-2 control-label">fecha hasta nivel escolaridad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechahastanivelescolaridad}"/>
-                </div>
-            </div>-->
             
             <div class="row">
                 <button type="submit" class="btn btn-default">Agregar</button>
@@ -81,4 +52,14 @@
 </div>
 
 </body>
+<script>
+    $(document).ready(function () {
+        $('#fechapresentacion').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        
+        
+    });
+</script>
 </html>
