--- a/src/main/resources/templates/fragments/comite/comitereporte.html
+++ b/src/main/resources/templates/fragments/comite/comitereporte.html
@@ -1,102 +1,61 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<!--     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="">-->
-      <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" media="screen"/>
-     <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
-     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    
-     
-     
-    <title>SISADMRH-Reporte de comites</title>
-  <th:block th:include="../templates/header"></th:block>
-  </head>
+    <head lang="en">
+        <title>SISADMRH</title>
+    <th:block th:include="../templates/header"></th:block>
+</head>
 <body>
-<!--<div class="container">-->
-<div class="row">
- <div class="col-md-3">
+    <div class="row">
+        <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
-        <div class="col-md-7">
-    <h3 align="center">Generar Reporte de comites</h3>
-    <br><br><br>
-    
-        <form class="form-horizontal"   th:object="${comite}"  th:action="@{../comite}" method="post">
-          
-           <!--<div class="col-md-6">-->
-         
-            <div class="form-group">
-                <label class="col-sm-6 control-label">Fecha Desde(*):</label>
-                <div class="col-sm-2">
-                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechadesdecomite}" name="fechadesdecomite" id="fechahastacomite"  />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-6 control-label">Fecha Hasta(*):</label>
-                <div class="col-sm-2">
-                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control" type="text" th:field="*{fechahastacomite}" name="fechahastacomite" id="fechahastacomite"  />
-                </div>
-            </div>
-           
-           <!--</div>
-              <div class="col-md-6">
-                   </div>-->
+        <div class="col-md-8">
+            <h3>GENERACION DE REPORTE DE BENEFICIOS</h3>
+            <div>
+                <form class="form-horizontal" id="formbeneficio">
 
-
-          
-        </form>
-      <div class="row" align="center">
-                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Consultar</button>
-                <button type="submit" class="btn btn-default">Limpiar</button>
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label" >Codigo de comite:</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="codigo"/>
+                        </div>
+                    </div>
+                     <div class="form-group">    
+                        <label class="col-sm-3 control-label">Fecha Inicial:</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="fechainicial"/>
+                        </div>
+                        <label class="col-sm-2 control-label">Fecha Final:</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="fechafinal"/>
+                        </div>
+                    </div>
+                     <div class="form-group">    
+                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                    </div>
+                </form>
             </div>
-    </div>
-
-      <div class="col-md-12">
+        </div>
+        <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-</div>
-
-        
-       
+    </div>
 </body>
-<script src="../static/css/hydro/js/jquery.js"></script>
-	        
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script>
-// 		$(document).ready(function() {
-// 			$(function () {
-// 				$("#datepickersince").datepicker();
-// 			});
+<script>
+    $(document).ready(function () {
+        $('#fechainicial').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
 
-// 			$(function () {
-// 				$("#datepickeruntil").datepicker();
-// 			});
-// 		});
-		
-		$(document).ready(function () {
-		    var date = new Date();
-		    var currentMonth = date.getMonth();
-		    var currentDate = date.getDate();
-		    var currentYear = date.getFullYear();
-                    
-		    $('#fechacontratacionhasta').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		       dateFormat: 'yy-mm-dd'
-		    });
-		    
-		    $('#fechacontrataciondesde').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-		});
-	</script>
-        
-        
+        $('#fechafinal').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+        $('#generar').click(function(){
+            $("#formbeneficio").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("form#formbeneficio").submit();
+            
+        });
+    });
+</script>
+
 </html>
