--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Nuevo beneficio</title>
+    <title>Nuevo Cuadro directivo</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
 <div class="container">
-    <h2>Usuario Details</h2>
+    <h2>Detalle cuadro directivos</h2>
     <div>
         <form class="form-horizontal" th:object="${cuadrodirectivo}" th:action="@{../cuadrodirectivo}" method="post">
 <!--            <input type="hidden" th:field="*{codigocuadrodirectivo}"/>
@@ -41,6 +41,12 @@
                 <label class="col-sm-2 control-label">fecha presentacion:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{fechapresentacion}"/>
+                </div>
+            </div>
+  <div class="form-group">
+                <label class="col-sm-2 control-label">codigo emppleado:</label>
+                <div class="col-sm-10">
+<!--                   <input type="text" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
                 </div>
             </div>
             
