--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -63,7 +63,7 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/comites/}">Consultar comites</a></li>
                                                  <li><a href="#" th:href="@{/comites/new/comite}">Crear comite</a></li>
-					</ul>
+                                                 <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
 				</li>
 				
                                 <li class="dropdown">
