--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo empleado:</label>
+<!--                <label class="col-sm-2 control-label">Codigo empleado:</label>-->
                                      <div class="col-sm-10">
 <!--               <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
                                           </div>
