--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
   <div class="form-group">
-                <label class="col-sm-2 control-label">codigo emppleado:</label>
+<!--                <label class="col-sm-2 control-label">codigo emppleado:</label>-->
                 <div class="col-sm-10">
 <!--                   <input type="text" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
                 </div>
