--- a/src/main/resources/templates/fragments/comite/comitesreport.html
+++ b/src/main/resources/templates/fragments/comite/comitesreport.html
@@ -10,24 +10,24 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE BENEFICIOS</h3>
+            <h3>GENERACION DE REPORTE DE COMITES</h3>
             <div>
                 <form class="form-horizontal" id="formbeneficio">
 
                     <div class="form-group">
                         <label class="col-sm-3 control-label" >Codigo de comite:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo"/>
+                            <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
                     </div>
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechainicial"/>
+                            <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
                         </div>
                         <label class="col-sm-2 control-label">Fecha Final:</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechafinal"/>
+                            <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
                         </div>
                     </div>
                      <div class="form-group">    
@@ -51,8 +51,8 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formbeneficio").attr('action', '../pdf/'+ $("#codigo").val().toString());
-            $("form#formbeneficio").submit();
+            $("#formcomite").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("form#formcomite").submit();
             
         });
     });
