--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -38,6 +38,15 @@
                                                 <li><a href="#" th:href="@{/roles/new/rol}">Crear Rol</a></li>
                                               
 					</ul>
+                                        
+                                        
+                                 <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar tigres <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+						<li><a href="#" th:href="@{/betos/report/}">Reporte tigres</a></li>
+						<li><a href="#"></a></li>
+					</ul>
+				</li>
 				</li>
                                 <li ><a href="#">Carga de Archivos Fuentes<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a></li>
 				<li class="dropdown">
@@ -81,6 +90,7 @@
 						<li><a href="#"></a></li>
 					</ul>
 				</li>
+                                
                                 
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Comisiones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
